--- a/frontend/src/containers/Home/Homed/homed.css
+++ b/frontend/src/containers/Home/Homed/homed.css
@@ -1,3 +1,119 @@
-.row-content {
-    padding: 50px 0px;
+.envelope {
+    margin-top: 69px;
+}
+
+
+.row-contents {
+    padding-top: 6vh !important;
+    padding-bottom: 0vh !important ;
+}
+
+.filter-box {
+    background-color: #252422;
+    border-radius: 30px;
+}
+
+.filter-box-small {
+    background-color: #252422;
+}
+
+.search-box-blue {
+    background-color:   #0353A4 !important;
+    border-radius: 30px;
+}
+
+.search-box-green {
+    background-color: #2A9134 !important;
+    border-radius: 30px;
+}
+
+.search-sub-text {
+    color: #fffcf2;
+    font-family: 'Ubuntu' , serif ;
+    font-weight: 300;
+    padding: 0vw 2vh;
+    line-height: 150% !important;
+}
+
+.search-heading {
+    font-family: 'Bree Serif', serif;
+    color: #403D39;
+    padding: 1vw 2vh;
+    font-size: 6vw;
+}
+
+.search-bar-hold {
+    padding: 2vh; 
+    margin: 1vw 2vh;
+}
+
+
+@media screen and (max-width: 1300px) {
+    .search-heading {
+        font-size: 8vw;
+    }
+
+    .row-contents {
+        padding-top: 6vh !important;
+        padding-bottom: 0vh !important ;   
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .search-heading {
+        font-size: 11vw;
+    }
+    .row-contents {
+        padding-top: 5vh !important;
+        padding-bottom: 0vh !important ;   
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .search-heading {
+        font-size: 15vw;   
+    }
+
+    .row-contents {
+        padding-top: 4.3vh !important;
+        padding-bottom: 0vh !important ;   
+    }
+}
+
+.padding-remover {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+
+.home-search-bar {
+    border-radius: 100px !important;
+    border-width: 0px !important;
+    background-color: #fffcf2 !important;
+    font-family: 'Ubuntu', serif !important;
+    font-weight: 300 !important;
+    height: 40px !important;
+}
+
+.search-button {
+    border-radius: 100px !important;
+    background-color: #ccc5b9 !important;
+    border-width: 0px !important;
+    font-family: 'Ubuntu', serif !important;
+    font-weight: 500 !important;
+    color: #252422 !important;
+    height: 40px !important;
+    width: 90% !important;
+    max-width: 100px !important;
+}
+
+.filter-heading {
+    font-family: 'Bree Serif', serif;
+    color: #ccc5b9;
+    padding: 1vw 2vh;
+}
+
+.results-box {
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0px 8px 23px -6px rgba(0,0,0,0.75);
 }
