--- a/frontend/src/containers/Home/StationDetails/stationDisplay.css
+++ b/frontend/src/containers/Home/StationDetails/stationDisplay.css
@@ -6,9 +6,32 @@
     padding-bottom: 30px;
 }
 
+.no-comment {
+    font-family: 'Ubuntu', serif;
+    color: #C0C0C0;
+    font-weight: 300;
+}
+
+.post-comment-input {
+    border-radius: 50px !important;
+    border-width: 0px !important;
+    font-family: 'Ubuntu', serif;
+    font-weight: 300 !important;
+    color: #403D39;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.commenter {
+    padding-bottom: 3px;
+    padding-top: 3px;
+}
+
 .sub-heading {
     color: white;
-    background-color: rgb(47, 48, 49);
+    background-color: #403D39;
+    border-radius: 10px !important;
+    font-family: 'Bree Serif', serif;
     padding: 5px 0px;
 }
 
@@ -18,5 +41,48 @@
 }
 
 .discussion-container {
-    background-color: rgb(228, 228, 228);
+    background-color: #EFEFEF;
+    border-radius: 20px !important;
+}
+
+.envelope-sd {
+    margin-top: 142px;
+}
+
+.station-heading-blue {
+    background-color: white;
+    border-radius: 10px !important;
+    box-shadow: 0px 5px 8px -5px rgba(0,0,0,0.75);
+    font-family: 'Bree Serif', serif;
+    color: #0353A4;
+}
+
+.station-heading-green {
+    background-color: white;
+    border-radius: 10px !important;
+    box-shadow: 0px 5px 8px -5px rgba(0,0,0,0.75);
+    font-family: 'Bree Serif', serif;
+    color: #2A9134;
+}
+
+.location-heading {
+    color: #403D39;
+}
+
+.post-button-blue {
+    background-color: #0353A4 !important;
+    border-radius: 50px !important;
+    font-family: 'Ubuntu', serif;
+    font-weight: 300 !important;
+    border-width: 0px !important;
+    width: 100% !important;
+}
+
+.post-button-green {
+    background-color: #2A9134 !important;
+    border-radius: 50px !important;
+    font-family: 'Ubuntu', serif;
+    font-weight: 300 !important;
+    border-width: 0px !important;
+    width: 100% !important;
 }
