--- a/frontend/src/containers/Home/searchCourseNav/searchCourseNav.css
+++ b/frontend/src/containers/Home/searchCourseNav/searchCourseNav.css
@@ -18,7 +18,7 @@
     background-color: #2A9134 !important;
 }
 
-.zer {
+.zerk {
     z-index: 1 !important;
-    margin-top: 75px !important;
+    margin-top: 65px !important;
 }
