--- a/frontend/src/containers/Home/Header/header.css
+++ b/frontend/src/containers/Home/Header/header.css
@@ -6,6 +6,7 @@
     background-color: white !important;
     box-shadow: 0px -6px 24px -1px rgba(0,0,0,0.75);
     z-index: 2 !important;
+    min-height: 75px !important
 }
 
 .navbrand-title {
